test/corpus/dotted_keys.txt
==================
Dotted keys produce nested object paths
==================
server.host: 127.0.0.1
server.port: 8080
app.debug: true
deeply.nested.path.value: hi

---

(source_file
  (object_pair
    key: (key
      (dotted_key))
    separator: (sep_string)
    value: (scalar))
  (object_pair
    key: (key
      (dotted_key))
    separator: (sep_string)
    value: (integer))
  (object_pair
    key: (key
      (dotted_key))
    separator: (sep_string)
    value: (keyword
      (kw_true)))
  (object_pair
    key: (key
      (dotted_key))
    separator: (sep_string)
    value: (scalar)))

==================
A quoted segment's own dot is flat content, not a path split (spec 0.7.0 § 5.3.3)
==================
"a.b": 1

---

(source_file
  (object_pair
    key: (key
      (quoted_key_segment))
    separator: (sep_string)
    value: (integer)))

==================
Quoting applies per dotted-path segment (spec 0.7.0 § 5.3.3)
==================
a."b.c".d: 1

---

(source_file
  (object_pair
    key: (key
      (dotted_key
        (quoted_key_segment)))
    separator: (sep_string)
    value: (integer)))
