test/corpus/escape_sequences.txt
==================
Escape sequences inside inline scalar (spec 0.5.0)
==================
tags: [a\,b, c\}d]

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (inline_array
      (inline_value
        (inline_scalar
          (escape_sequence)))
      (inline_value
        (inline_scalar
          (escape_sequence))))))

==================
Backslash escape in inline scalar
==================
path: [C\\Users]

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (inline_array
      (inline_value
        (inline_scalar
          (escape_sequence))))))

==================
Whole-line scalar value: backslash-u sequence is literal content (spec 0.7 § 3.7 boundary — no escape processing here)
==================
a: \u0041

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar)))
