test/corpus/inline_compounds.txt
==================
Inline object as pair value (spec 0.5.0)
==================
point: {x: 1, y: 2}
empty: {}

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (inline_object
      (inline_pair
        key: (key)
        separator: (sep_string)
        value: (inline_value
          (inline_scalar)))
      (inline_pair
        key: (key)
        separator: (sep_string)
        value: (inline_value
          (inline_scalar)))))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (empty_object)))

==================
Inline array as pair value (spec 0.5.0)
==================
tags: [prod, eu-west-1, staging]
empty: []

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (inline_array
      (inline_value
        (inline_scalar))
      (inline_value
        (inline_scalar))
      (inline_value
        (inline_scalar))))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (empty_array)))

==================
Inline array with trailing comma (spec 0.5.0)
==================
nums: [1, 2, 3,]

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (inline_array
      (inline_value
        (inline_scalar))
      (inline_value
        (inline_scalar))
      (inline_value
        (inline_scalar)))))

==================
Inline object with raw separator
==================
meta: {id:: raw-id, name: alice}

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (inline_object
      (inline_pair
        key: (key)
        separator: (sep_raw)
        value: (inline_value
          (inline_scalar)))
      (inline_pair
        key: (key)
        separator: (sep_string)
        value: (inline_value
          (inline_scalar))))))

==================
Quoted inline key: `,` inside it does not separate inline pairs (spec 0.7.0 § 5.3.3)
==================
k: {"a,b": 1, c: 2}

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (inline_object
      (inline_pair
        key: (key
          (quoted_key_segment))
        separator: (sep_string)
        value: (inline_value
          (inline_scalar)))
      (inline_pair
        key: (key)
        separator: (sep_string)
        value: (inline_value
          (inline_scalar))))))

==================
Quoted inline key: `}` inside it does not close the inline object (spec 0.7.0 § 5.3.3)
==================
k: {"a}b": 1, c: 2}

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (inline_object
      (inline_pair
        key: (key
          (quoted_key_segment))
        separator: (sep_string)
        value: (inline_value
          (inline_scalar)))
      (inline_pair
        key: (key)
        separator: (sep_string)
        value: (inline_value
          (inline_scalar))))))
==================
NBSP (U+00A0) between inline pair separator and nested array is § 3.3 whitespace (spec 0.7.0 § 3.3/§ 4 <sep-end>, § 5.8.1)
==================
{a: [1]}

---

(source_file
  (top_array_item
    value: (inline_object
      (inline_pair
        key: (key)
        separator: (sep_string)
        value: (inline_value
          (nested_inline_array
            (inline_value
              (inline_scalar))))))))

==================
NBSP (U+00A0) between inline array opener and nested object is § 3.3 whitespace (spec 0.7.0 § 3.3/§ 4, § 5.8.1)
==================
[ {a: 1}]

---

(source_file
  (top_array_item
    value: (inline_array
      (inline_value
        (nested_inline_object
          (inline_pair
            key: (key)
            separator: (sep_string)
            value: (inline_value
              (inline_scalar))))))))
