test/corpus/keys/edge_keys.txt
==================
Keys with allowed special characters
==================
my-key: dash
my_key: underscore
my+key: plus
key/path: slash
v1.0: version-like
unicode-ключ: hi

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar))
  (object_pair
    key: (key
      (dotted_key))
    separator: (sep_string)
    value: (scalar))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar)))

==================
Values with colons stay scalar
==================
addr: example.com:8080
url: http://example.com/path
ratio: 1:2:3

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar)))

==================
Quoted key segments: all three delimiters, self-escaped (spec 0.7.0 § 5.3.3)
==================
"say \"hi\"": 1
'don\'t': 1
`a\`b`: 1

---

(source_file
  (object_pair
    key: (key
      (quoted_key_segment))
    separator: (sep_string)
    value: (integer))
  (object_pair
    key: (key
      (quoted_key_segment))
    separator: (sep_string)
    value: (integer))
  (object_pair
    key: (key
      (quoted_key_segment))
    separator: (sep_string)
    value: (integer)))

==================
Quoted key content is never trimmed (spec 0.7.0 § 5.3.3, § 4)
==================
"first name": alice

---

(source_file
  (object_pair
    key: (key
      (quoted_key_segment))
    separator: (sep_string)
    value: (scalar)))

==================
A quote NOT at the start of the segment stays an ordinary bare key byte
(spec 0.7.0 § 5.3.3 positional rule — conformant, pre-existing behaviour)
==================
"port": 1
port": 2

---

(source_file
  (object_pair
    key: (key
      (quoted_key_segment))
    separator: (sep_string)
    value: (integer))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer)))

==================
A spaced key is ONE segment: only its very first byte is positional.
A quote opening a LATER glued word is ordinary content, not a new
quoted segment (spec 0.7.0 § 5.3.3 positional rule)
==================
foo "bar": 1

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer)))

==================
Nothing may follow a quoted segment's closer: InvalidKey (spec 0.7.0 § 5.3.3)
:error
==================
"a" "b": 1

---

(source_file
  (ERROR
    (quoted_key_segment))
  (object_pair
    key: (key
      (quoted_key_segment))
    separator: (sep_string)
    value: (integer)))

==================
Raw VT inside a key is admitted as key content (spec 0.7.0 Appendix A widens <key-char> to admit VT/FF, matching § 3.3)
==================
ab: 1

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer)))

==================
Raw FF as leading line indentation is stripped like any other § 3.3 whitespace (spec 0.7.0 Appendix A + § 3.3 "whitespace at the beginning of a line is indentation ... the parser ignores it")
==================
a: 1

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer)))

==================
Raw NEL (U+0085) inside a key stays ordinary glued content — conformant boundary, not "indentation" (a non-ASCII § 3.3 whitespace member is deliberately NOT folded into `extras`; interior placement is preserved verbatim per § 4's key-char note)
==================
ab: 1

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer)))

==================
Empty double-quoted segment is EmptyKey (spec 0.7.0 § 6.5)
:error
==================
"": 1

---

(source_file)

==================
Empty single-quoted segment is EmptyKey (spec 0.7.0 § 6.5)
:error
==================
'': 1

---

(source_file)

==================
Empty backtick-quoted segment is EmptyKey (spec 0.7.0 § 6.5)
:error
==================
``: 1

---

(source_file)

==================
Empty quoted segment inside a dotted path is EmptyKey (spec 0.7.0 § 6.5)
:error
==================
a."".b: 1

---

(source_file)

==================
Raw DEL in a bare key is InvalidKey (spec 0.7.0 § 4 <key-char>)
:error
==================
ab: 1

---

(source_file)
