test/corpus/multiline_string.txt
==================
Stripped multiline string
==================
body: (
    {
      "qwe": 1
    }
)

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (multiline_stripped
      (open_paren)
      (multiline_content_line)
      (multiline_content_line)
      (multiline_content_line)
      (close_paren))))

==================
Verbatim multiline string
==================
sig: ((
  hello
  world
))

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (multiline_verbatim
      (open_dparen)
      (multiline_content_line)
      (multiline_content_line)
      (close_dparen))))
