test/corpus/nested.txt
==================
Array of objects
==================
upstreams: [
    {
        host: a.example
        port: 1080
    }
    {
        host: b.example
        port: 1080
    }
]

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (compound_array
      (open_bracket)
      (array_item
        value: (compound_object
          (open_brace)
          (object_pair
            key: (key)
            separator: (sep_string)
            value: (scalar))
          (object_pair
            key: (key)
            separator: (sep_string)
            value: (integer))
          (close_brace)))
      (array_item
        value: (compound_object
          (open_brace)
          (object_pair
            key: (key)
            separator: (sep_string)
            value: (scalar))
          (object_pair
            key: (key)
            separator: (sep_string)
            value: (integer))
          (close_brace)))
      (close_bracket))))

==================
Object containing array
==================
config: {
    tags: [
        prod
        eu
    ]
}

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (compound_object
      (open_brace)
      (object_pair
        key: (key)
        separator: (sep_string)
        value: (compound_array
          (open_bracket)
          (array_item
            value: (scalar))
          (array_item
            value: (scalar))
          (close_bracket)))
      (close_brace))))
